--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.9.8"
+    "mysql2": "^3.9.8",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
